admission/ValidatingAdmissionPolicy/policies/no-admin-ports/deny.yaml
apiVersion: v1
kind: Service
metadata:
  name: violating-no-admin-ports
  annotations:
    kubeapt.io/uuid: "4bb23409-36e0-41b0-8511-c6511ac6b211"
spec:
  type: LoadBalancer
  selector:
    app: test
  ports:
  - name: admin
    port: 8080
    targetPort: 8080
